welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:11: error: illegal start of simple expression
	for (k <- 0 to nbPas)}
                             ^